# hosted-cloud-ovhcloud

./: Makefile  README.md  ansible.cfg  pyproject.toml  requirements.yml
inventory/: ovhcloud.yml
inventory/group_vars/: all.yml
playbooks/: ovhcloud.yml
roles/network/: README.md
roles/network/tasks/: main.yml
roles/network/templates/: 50-cloud-init.yaml.j2
roles/system-optimization/: README.md
roles/system-optimization/defaults/: main.yml
roles/system-optimization/tasks/: main.yml
