[project]
name = "opennebula-hosted-ovhcloud"
version = "0.0.1"
description = "OpenNebula deployment on OVHcloud infrastructure"
authors = ["OpenNebula <contact@opennebula.io>"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"

[tool.hatch.envs.ovhcloud-default]
skip-install = true
installer = "uv"
dependencies = [
  "ansible-core==2.19",
  "ansible-lint==25.7.0"
]
